presentación casi lista

--- a/taller.qmd
+++ b/taller.qmd
@@ -227,3 +227,5 @@ Crear un lugar, volverse _encontrable_
 - Escribe todo lo que aprendes! 📒
 - Trata de dar de vuelta lo que has recibido 💖
 
+
+# Gracias <span style="font-size: 110%; color: #9069C0;">♥</span>
